Split apt-get commands into multiple lines for better error handling

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,16 @@ jobs:
           python-version: '3.10'
 
       - name: Install system dependencies
-        run: sudo apt-get update && sudo apt-get install -y git zip unzip openjdk-17-jdk autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev build-essential python3 python3-pip python3-setuptools python3-wheel libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev libswscale-dev libavformat-dev libavcodec-dev automake libltdl-dev
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential git zip unzip openjdk-17-jdk
+          sudo apt-get install -y autoconf libtool pkg-config zlib1g-dev
+          sudo apt-get install -y libncurses5-dev libncursesw5-dev libtinfo5
+          sudo apt-get install -y cmake libffi-dev libssl-dev
+          sudo apt-get install -y python3 python3-pip python3-setuptools python3-wheel
+          sudo apt-get install -y libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev
+          sudo apt-get install -y libportmidi-dev libswscale-dev libavformat-dev libavcodec-dev
+          sudo apt-get install -y automake libltdl-dev
 
       - name: Install Buildozer
         run: |
